force-app/main/default/objects/User/fields/Adabas__c.field-meta.xml
<CustomField>
    <fullName>Adabas__c</fullName>
    <label>Adabas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>