force-app/main/default/objects/User/fields/AdabasAssignedDocument__c.field-meta.xml
<CustomField>
    <fullName>AdabasAssignedDocument__c</fullName>
    <description>BL 0 - J110  - Amazenar CNPJ/CPF obtido pela consulta do objeto Adabas Site</description>
    <label>Adabas Documento Atribuído</label>
    <length>20</length>
    <type>Text</type>
</CustomField>