force-app/main/default/objects/User/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <label>Centro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>