force-app/main/default/objects/User/fields/ChannelCode__c.field-meta.xml
<CustomField>
    <fullName>ChannelCode__c</fullName>
    <formula>IF(ChannelName__c == &apos;Lojas Proprias&apos;, &apos;2&apos;,
IF(ChannelName__c == &apos;Lojas Revendas&apos;, &apos;1262&apos;,
IF(ChannelName__c == &apos;Call Center&apos;, &apos;1&apos;, &apos;0&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Canal</label>
    <type>Text</type>
</CustomField>