force-app/main/default/objects/User/fields/ChannelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelName__c</fullName>
    <description>Channel name</description>
    <label>Channel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>