force-app/main/default/objects/User/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <description>Responsável por armazenar as informações do Canal de Atendimento proveniente da integração com IDM.</description>
    <label>Escritório de Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>