force-app/main/default/objects/User/fields/PartnerGroup__c.field-meta.xml
<CustomField>
    <fullName>PartnerGroup__c</fullName>
    <label>Grupo do Aliado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VendasAliado</fullName>
                <label>Vendas Aliado</label>
            </value>
            <value>
                <fullName>VendasAliadoPaPConsultor</fullName>
                <label>Vendas Aliado PaP Consultor</label>
            </value>
            <value>
                <fullName>VendasAliadoPaPGerente</fullName>
                <label>Vendas Aliado PaP Gerente</label>
            </value>
            <value>
                <fullName>VendasAliadoRevendaConsultor</fullName>
                <label>Vendas Aliado Revenda Consultor</label>
            </value>
            <value>
                <fullName>VendasAliadoRevendaGerente</fullName>
                <label>Vendas Aliado Revenda Gerente</label>
            </value>
            <value>
                <fullName>VendasAliadoTelevendasGerente</fullName>
                <label>Vendas Aliado Televendas Gerente</label>
            </value>
            <value>
                <fullName>VendasAliadoPaPSupervisor</fullName>
                <label>Vendas Aliado PaP Supervisor</label>
            </value>
            <value>
                <fullName>VendasAliadoTelevendasCoordenador</fullName>
                <label>Vendas Aliado Televendas Coordenador</label>
            </value>
            <value>
                <fullName>VendasAliadoTelevendasSupervisor</fullName>
                <label>Vendas Aliado Televendas Supervisor</label>
            </value>
            <value>
                <fullName>VendasAliadoTelevendasConsultor</fullName>
                <label>Vendas Aliado Televendas Consultor</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraNextConvergenteOp</fullName>
                <label>Atendimento Aliado Silver e Purpura Next Convergente Operador</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraNextConvergenteSup</fullName>
                <label>Atendimento Aliado Silver e Purpura Next Convergente Supervisor</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraRetratacaoFixaOp</fullName>
                <label>Atendimento Aliado Silver e Purpura Retratacao Fixa Operador</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraRetratacaoFixaSup</fullName>
                <label>Atendimento Aliado Silver e Purpura Retratacao Fixa Supervisor</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraRetratacaoMovelOp</fullName>
                <label>Atendimento Aliado Silver e Purpura Retratacao Movel Operador</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraRetratacaoMovelSup</fullName>
                <label>Atendimento Aliado Silver e Purpura Retratacao Movel Supervisor</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraSatisfacaoOp</fullName>
                <label>Atendimento Aliado Silver e Purpura Satisfacao Operador</label>
            </value>
            <value>
                <fullName>AtendAliadoSilverePurpuraSatisfacaoSup</fullName>
                <label>Atendimento Aliado Silver e Purpura Satisfacao Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoBackofficeOperador</fullName>
                <label>Atendimento Aliado Backoffice Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoBackofficeRetencaoOp</fullName>
                <label>Atendimento Aliado Backoffice Retencao Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoBackofficeRetencaoSup</fullName>
                <label>Atendimento Aliado Backoffice Retencao Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoBackofficeSupervisor</fullName>
                <label>Atendimento Aliado Backoffice Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoCobrancaAtivoOperador</fullName>
                <label>Atendimento Aliado Cobranca Ativo Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoCobrancaAtivoSupervisor</fullName>
                <label>Atendimento Aliado Cobranca Ativo Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoCobrancaReceptivoOperador</fullName>
                <label>Atendimento Aliado Cobranca Receptivo Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoCobrancaReceptivoSupervisor</fullName>
                <label>Atendimento Aliado Cobranca Receptivo Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoOuvidoriaOperador</fullName>
                <label>Atendimento Aliado Ouvidoria Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoOuvidoriaSupervisor</fullName>
                <label>Atendimento Aliado Ouvidoria Supervisor</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoPurpuraFixaCrosselingOp</fullName>
                <label>Atendimento Aliado Purpura Fixa Crosseling Operador</label>
            </value>
            <value>
                <fullName>AtendimentoAliadoPurpuraFixaCrosselingSup</fullName>
                <label>Atendimento Aliado Purpura Fixa Crosseling Supervisor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>