force-app/main/default/objects/User/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <description>Responsável por armazenar as informações de Site(Ponto de Venda) provenientes da integração com o sistema IDM/OIM.</description>
    <label>Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>