force-app/main/default/objects/User/fields/StoreCode__c.field-meta.xml
<CustomField>
    <fullName>StoreCode__c</fullName>
    <label>Código da Loja</label>
    <length>20</length>
    <type>Text</type>
</CustomField>