force-app/main/default/objects/User/fields/StoreConsultationDate__c.field-meta.xml
<CustomField>
    <fullName>StoreConsultationDate__c</fullName>
    <label>Data da Consulta</label>
    <type>Date</type>
</CustomField>