force-app/main/default/objects/User/fields/StoreName__c.field-meta.xml
<CustomField>
    <fullName>StoreName__c</fullName>
    <label>Nome da Loja</label>
    <length>60</length>
    <type>Text</type>
</CustomField>