force-app/main/default/objects/User/fields/StoreSegment__c.field-meta.xml
<CustomField>
    <fullName>StoreSegment__c</fullName>
    <label>Segmento da Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>