force-app/main/default/objects/User/fields/SupervisorId__c.field-meta.xml
<CustomField>
    <fullName>SupervisorId__c</fullName>
    <description>Supervisor do operador</description>
    <inlineHelpText>Supervisor do usuário</inlineHelpText>
    <label>Supervisor</label>
    <relationshipName>SupervisedUsers</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>